--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.9.1",
     "react-modal": "^1.6.5",
+    "react-motion": "^0.5.0",
     "react-notification": "^6.6.0"
   },
   "scripts": {
