--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dropzone": "^3.9.1",
     "react-modal": "^1.6.5",
     "react-motion": "^0.5.0",
-    "react-notification": "^6.6.0"
+    "react-notification": "^6.6.0",
+    "react-redux": "^5.0.5",
+    "react-transition-group": "^1.1.3",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
