--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "immutable": "^3.8.1",
     "ip": "^1.1.5",
     "jquery": "^3.1.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-update": "^15.4.2",
     "react-dom": "^15.4.2",
