--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.4.2",
     "react-addons-update": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.13.1",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0"
