--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "filesize": "^3.5.10",
     "guid": "0.0.12",
     "immutable": "^3.8.1",
     "ip": "^1.1.5",
