--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "immutable": "^3.8.1",
     "ip": "^1.1.5",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-addons-update": "^15.4.2",
