--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
   },
   "dependencies": {
     "filesize": "^3.5.10",
-    "guid": "0.0.12",
     "immutable": "^3.8.1",
     "ip": "^1.1.5",
     "jquery": "^3.1.1",
@@ -61,7 +60,8 @@
     "react-dropzone": "^3.13.1",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
