--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-addons-update": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.1",
+    "react-modal": "^2.2.0",
     "react-motion": "^0.5.0",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
